[gd_scene load_steps=5 format=1]

[ext_resource path="res://script/camera.gd" type="Script" id=1]
[ext_resource path="res://sprite/ui/progress_bar/progress_bar_under_player.png" type="Texture" id=2]
[ext_resource path="res://sprite/ui/progress_bar/progress_bar_over.png" type="Texture" id=3]
[ext_resource path="res://sprite/ui/progress_bar/progress_bar_progress.png" type="Texture" id=4]

[node name="main_camera" type="Node"]

script/script = ExtResource( 1 )

[node name="main_camera" type="Camera2D" parent="."]

transform/pos = Vector2( -22.3669, 22.9322 )
transform/scale = Vector2( 0.301036, 0.283369 )
offset = Vector2( 150, 75 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="main_canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="player_name" type="Label" parent="main_canvas"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 47.0
margin/bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_health" type="Label" parent="main_canvas"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 20.0
margin/right = 40.0
margin/bottom = 40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "health: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_health_bar" type="TextureProgress" parent="main_canvas"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 550.0
margin/right = 528.0
margin/bottom = 590.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 2 )
texture/over = ExtResource( 3 )
texture/progress = ExtResource( 4 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )


